--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*, * *{
+  font-family: "Titillium Web";
+}
+
+body{
+  background: #f3f3f3;
+}
